--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -24,6 +24,11 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>fr.shazilgerard</groupId>
+			<artifactId>PatientFind</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
   <parent>
   	<groupId>nl.gerardklomphaar</groupId>
