--- a/findmypatient_ApplView/pom.xml
+++ b/findmypatient_ApplView/pom.xml
@@ -8,6 +8,12 @@
 
   <name>findmypatient_ApplView</name>
   <url>http://maven.apache.org</url>
+  
+  <parent>
+  	<groupId>fr.gerardklomphaar</groupId>
+  	<artifactId>supa-group</artifactId>
+  	<version>0.0.1-SNAPSHOT</version>
+  </parent>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,11 +28,22 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
-  <parent>
-  	<groupId>fr.gerardklomphaar</groupId>
-  	<artifactId>supa-group</artifactId>
-  	<version>0.0.1-SNAPSHOT</version>
-  </parent>
+  
+  	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
