--- a/findmypatient_webview/pom.xml
+++ b/findmypatient_webview/pom.xml
@@ -9,6 +9,12 @@
 
   <name>findmypatient_webview</name>
   <url>http://maven.apache.org</url>
+  
+  <parent>
+  	<groupId>nl.gerardklomphaar</groupId>
+  	<artifactId>supa-group</artifactId>
+  	<version>0.0.1-SNAPSHOT</version>
+  </parent>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,8 +24,22 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
+  	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
