--- a/supa-group/pom.xml
+++ b/supa-group/pom.xml
@@ -10,6 +10,7 @@
 	
 	<properties>
 		<spring.version>4.2.4.RELEASE</spring.version>
+		<derby.version>10.11.1.1</derby.version>
 	</properties>
 	
 	<dependencyManagement>
@@ -39,7 +40,16 @@
 				<artifactId>hibernate-core</artifactId>
 				<version>4.3.11.Final</version>
 			</dependency>
-
+			<dependency>
+				<groupId>org.apache.derby</groupId>
+				<artifactId>derbyclient</artifactId>
+				<version>${derby.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.derby</groupId>
+				<artifactId>derby</artifactId>
+				<version>${derby.version}</version>
+			</dependency>
 		</dependencies>
 
 	</dependencyManagement>
@@ -50,8 +60,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.1</version>
 					<configuration>
-						<source>1.6</source>
-						<target>1.6</target>
+						<source>1.8</source>
+						<target>1.8</target>
 					</configuration>
 				</plugin>
 			</plugins>
