--- a/genericHybernateDao/pom.xml
+++ b/genericHybernateDao/pom.xml
@@ -20,11 +20,11 @@
 	 </parent>
   
   	<dependencies>
-  	  	<dependency>
+<!--   	  	<dependency>
 			<groupId>fr.gklomphaar</groupId>
 			<artifactId>findmypatient_core</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-  		</dependency>
+  		</dependency> -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
@@ -57,4 +57,18 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
