--- a/supa-group/pom.xml
+++ b/supa-group/pom.xml
@@ -53,7 +53,7 @@
 		</dependencies>
 
 	</dependencyManagement>
-	<build>
+<!-- 	<build>
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -66,5 +66,5 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-	</build>
+	</build> -->
 </project>
