--- a/findmypatient_webview/pom.xml
+++ b/findmypatient_webview/pom.xml
@@ -11,7 +11,7 @@
   <url>http://maven.apache.org</url>
   
   <parent>
-  	<groupId>nl.gerardklomphaar</groupId>
+  	<groupId>fr.gerardklomphaar</groupId>
   	<artifactId>supa-group</artifactId>
   	<version>0.0.1-SNAPSHOT</version>
   </parent>
@@ -26,6 +26,24 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+		<dependency>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<groupId>javax.servlet</groupId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+		</dependency>
   </dependencies>
   
   	<build>
@@ -39,6 +57,14 @@
 						<target>1.8</target>
 					</configuration>
 				</plugin>
+				<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<warSourceDirectory>WebContent</warSourceDirectory>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
