--- a/findmypatient_webview/pom.xml
+++ b/findmypatient_webview/pom.xml
@@ -5,10 +5,9 @@
   <groupId>fr.gklomphaar</groupId>
   <artifactId>findmypatient_webview</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>findmypatient_webview</name>
-  <url>http://maven.apache.org</url>
   
   <parent>
   	<groupId>fr.gerardklomphaar</groupId>
@@ -21,11 +20,16 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
+    	<dependency>
+			<groupId>fr.gklomphaar</groupId>
+			<artifactId>findmypatient_core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+  		</dependency>
+	    <dependency>
+	      <groupId>junit</groupId>
+	      <artifactId>junit</artifactId>
+	      <scope>test</scope>
+	    </dependency>
 		<dependency>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
