--- a/findmypatient_webview/pom.xml
+++ b/findmypatient_webview/pom.xml
@@ -48,6 +48,11 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20160212</version>
+		</dependency>
   </dependencies>
   
   	<build>
