Before refactoring, problems with generic DAO and spring

--- a/findmypatient_webview/pom.xml
+++ b/findmypatient_webview/pom.xml
@@ -25,6 +25,11 @@
 			<artifactId>findmypatient_core</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
   		</dependency>
+    	<dependency>
+			<groupId>fr.gklomphaar</groupId>
+			<artifactId>genericHybernateDao</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+  		</dependency>
 	    <dependency>
 	      <groupId>junit</groupId>
 	      <artifactId>junit</artifactId>
