--- a/findMyPatient_Core/pom.xml
+++ b/findMyPatient_Core/pom.xml
@@ -13,6 +13,11 @@
   </parent>
 
   <dependencies>
+  		<dependency>
+  			<groupId>fr.gklomphaar</groupId>
+  			<artifactId>services</artifactId>
+  			<version>0.0.1-SNAPSHOT</version>
+  		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -21,6 +26,12 @@
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derbyclient</artifactId>
 			<version>10.11.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+			<version>10.11.1.1</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
