--- a/findmypatient_webview/pom.xml
+++ b/findmypatient_webview/pom.xml
@@ -61,6 +61,11 @@
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derby</artifactId>
 		</dependency>
+	    <dependency>
+	        <groupId>jstl</groupId>
+	        <artifactId>jstl</artifactId>
+	        <version>1.2</version>
+	    </dependency>
   </dependencies>
   
   	<build>
