--- a/findmypatient_webview/pom.xml
+++ b/findmypatient_webview/pom.xml
@@ -75,34 +75,14 @@
   </dependencies>
   
   	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.1</version>
-					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
-					</configuration>
-				</plugin>
-				<plugin>
-					<artifactId>maven-war-plugin</artifactId>
-					<version>2.4</version>
-					<configuration>
-						<warSourceDirectory>WebContent</warSourceDirectory>
-						<failOnMissingWebXml>false</failOnMissingWebXml>
-					</configuration>
-				</plugin>
-				<!-- Attach source code -->
-<!-- 	            <plugin>
-	                <groupId>org.apache.maven.plugins</groupId>
-	                <artifactId>maven-eclipse-plugin</artifactId>
-	                <configuration>
-	                    <downloadSources>true</downloadSources>
-	                    <downloadJavadocs>true</downloadJavadocs>
-	                </configuration>
-	            </plugin> -->
-			</plugins>
-		</pluginManagement>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
+		    <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+		   </plugin>
+		</plugins>
 	</build>
 </project>
