--- a/genericHybernateDao/pom.xml
+++ b/genericHybernateDao/pom.xml
@@ -17,11 +17,6 @@
 	</parent>
   
   	<dependencies>
-   	  	<dependency>
-			<groupId>fr.gklomphaar</groupId>
-			<artifactId>findmypatient_core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-  		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
@@ -51,17 +46,14 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.1</version>
-					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
+		    <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+		   </plugin>
+		</plugins>
 	</build>
 </project>
