--- a/supa-group/pom.xml
+++ b/supa-group/pom.xml
@@ -58,10 +58,12 @@
 		</dependencies>
 
 	</dependencyManagement>
-<!-- 	<build>
+	<build>
 		<pluginManagement>
 			<plugins>
+				<!-- Compiler  -->
 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.1</version>
 					<configuration>
@@ -69,7 +71,21 @@
 						<target>1.8</target>
 					</configuration>
 				</plugin>
+				<!-- Attach source code -->
+			    <plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>3.0.0</version>
+					<executions>
+						<execution>
+							<id>attach-sources</id>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+			   </plugin>
 			</plugins>
 		</pluginManagement>
-	</build> -->
+	</build>
 </project>
