--- a/findmypatient_webview/pom.xml
+++ b/findmypatient_webview/pom.xml
@@ -10,7 +10,7 @@
   <parent>
   	<groupId>fr.gklomphaar</groupId>
   	<artifactId>supa-group</artifactId>
-  	<version>0.0.1-SNAPSHOT</version>
+  	<version>1.0.0</version>
   </parent>
 
   <properties>
@@ -21,12 +21,12 @@
     	<dependency>
 			<groupId>fr.gklomphaar</groupId>
 			<artifactId>findmypatient_core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>1.0.0</version>
   		</dependency>
     	<dependency>
 			<groupId>fr.gklomphaar</groupId>
 			<artifactId>Services</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>1.0.0</version>
   		</dependency>
 		<dependency>
 			<artifactId>javax.servlet-api</artifactId>
@@ -60,7 +60,6 @@
 	        <artifactId>jstl</artifactId>
 	        <version>1.2</version>
 	    </dependency>
-	    
 	    <dependency>
 	      <groupId>junit</groupId>
 	      <artifactId>junit</artifactId>
@@ -73,11 +72,14 @@
 			<scope>test</scope>
 		</dependency>
   </dependencies>
-  
   	<build>
 		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
+			<plugin>            
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-war-plugin</artifactId>
+			  <configuration>
+			    <webXml>WebContent\WEB-INF\web.xml</webXml>        
+			  </configuration>
 			</plugin>
 		    <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
