--- a/services/pom.xml
+++ b/services/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 	 	<groupId>fr.gklomphaar</groupId>
 	 	<artifactId>supa-group</artifactId>
-	 	<version>0.0.1-SNAPSHOT</version>
+	 	<version>1.0.0</version>
 	</parent>
   
   	<dependencies>
